--- a/ios/Classes/doordeck-sdk-swift/Quick Entry/Base.lproj/LockUnlockScreen.storyboard
+++ b/ios/Classes/doordeck-sdk-swift/Quick Entry/Base.lproj/LockUnlockScreen.storyboard
@@ -42,7 +42,7 @@
                                     <action selector="dismissButtonClicked" destination="uNw-jB-9vD" eventType="touchUpInside" id="zOO-DP-NwG"/>
                                 </connections>
                             </button>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ukw-Bo-4up" customClass="unlockAnimation" customModule="Doordeck" customModuleProvider="target">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ukw-Bo-4up" customClass="unlockAnimation" customModule="doordeck">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="414"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
